--- a/app/index.html
+++ b/app/index.html
@@ -2,19 +2,32 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+  <link rel="shortcut icon" type="image/ico" href="favicons/favicon.ico">
+  <title>/// Chris Grant</title>
+  <script type="text/javascript" src="//use.typekit.net/jnq2fhm.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <link rel="stylesheet" href="stylesheets/screen.css"/>
+  <link rel="stylesheet" href="stylesheets/styles.css"/>
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
+  <ul class="nav">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
-  <div ng-view></div>
+  <div ng-view style="font-size: 24px; font-family: myriad-pro; font-weight: 600" >
+  	
+  </div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
+  <div style="font-size: 24px; font-family: adobe-garamond-pro; font-weight: 400">Angular seed app: v<span app-version></span>
+	  <p style="font-family: Proxima Nova"> Angular</p>
+  </div>
+	<footer>
+		footer
+	</footer>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
@@ -25,5 +38,8 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="javascripts/bootstrap/dropdown.js"></script>
+  <script src="javascripts/bootstrap/scrollspy.js"></script>
+  <script src="javascripts/bootstrap/carousel.js"></script>
 </body>
 </html>
