--- a/app/index.html
+++ b/app/index.html
@@ -20,14 +20,18 @@
 		<div id="cg-masthead-logo">
 		</div>
 	</div>
-	<div class="navbar" style="style="background-color: blue; color: #642a38; font-size: 18px; font-family: proxima-nova; font-weight: 400">
+	<div class="navbar">
+		<div class="icons-monogram pull-left">
+		</div>
 	  <ul>
-	    <li><a href="#/view1">view1</a></li>
-	    <li><a href="#/view2">view2</a></li>
+			<li><a href="/about" title="about">about</a></li>
+			<li><a href="/works" title="works">works</a></li>
+			<li><a href="/thoughts" title="thoughts">thoughts</a></li>
+			<li><a href="/resume" title="resume">resume</a></li>
 	  </ul>
 	</div>
-	<div class="container">
-	  <div ng-view style="font-size: 24px; font-family: myriad-pro; font-weight: 600" >
+	<div class="container main">
+	  <div ng-view>
 	  </div>
 	</div>
 	<footer>
@@ -39,14 +43,14 @@
 					</div>
 					<div class="col-lg-8 col-md-8 col-xs-12">
 						<ul class="social">
-							<li> <a href="mailto:christopher.michael.grant@gmail.com" class="icons-email-icon-inactive social-icon"></a></li>
-							<li><a href="http://www.facebook.com/cmgrant" class="icons-fb-icon-inactive social-icon" title="facebook"></a></li>
-							<li><a href="http://www.pinterest.com/chrgra" class="icons-pinterest-icon-inactive social-icon" title="pinterest"></a></li>
-							<li><a href="http://www.dribbble.com/chrismgrant" class="icons-dribbble-icon-inactive social-icon" title="dribbble"></a></li>
-							<li><a href="http://www.linkedin.com/pub/chris-grant/39/682/249/" class="icons-linkedin-icon-inactive social-icon" title="linkedin"></a></li>
-							<li><a href="http://www.instagram.com/grizzygrant" class="icons-insta-icon-inactive social-icon" title="instagram"></a></li>
-							<li><a href="http://www.twitter.com/chrgra" class="icons-twitter-icon-inactive social-icon" title="twitter"></a></li>
-							<li><a href="http://www.github.com/chrismgrant" class="icons-github-icon-inactive social-icon" title="github"></a></li>
+							<li id="email"> <a href="mailto:christopher.michael.grant@gmail.com" class="social-icon icons-email-icon-inactive"></a></li>
+							<li><a href="http://www.facebook.com/cmgrant" class="social-icon icons-fb-icon-inactive" title="facebook"></a></li>
+							<li><a href="http://www.pinterest.com/chrgra" class="social-icon icons-pinterest-icon-inactive" title="pinterest"></a></li>
+							<li><a href="http://www.dribbble.com/chrismgrant" class="social-icon icons-dribbble-icon-inactive" title="dribbble"></a></li>
+							<li><a href="http://www.linkedin.com/pub/chris-grant/39/682/249/" class="social-icon icons-linkedin-icon-inactive" title="linkedin"></a></li>
+							<li><a href="http://www.instagram.com/grizzygrant" class="social-icon icons-insta-icon-inactive" title="instagram"></a></li>
+							<li><a href="http://www.twitter.com/chrgra" class="social-icon icons-twitter-icon-inactive" title="twitter"></a></li>
+							<li><a href="http://www.github.com/chrismgrant" class="social-icon icons-github-icon-inactive" title="github"></a></li>
 						</ul>
 					</div>
 				</div>
