working on routing

--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,13 @@
 	<link rel="stylesheet" href="stylesheets/screen.css"/>
   <link rel="stylesheet" href="stylesheets/styles.css"/>
 </head>
-<body>
+<body ng-controller="MainCtrl">
 	<div class="jumbotron"> 
 		<div id="cg-masthead-logo">
 		</div>
 	</div>
 	<div class="navbar">
-		<div class="icons-monogram pull-left">
+		<div class="icons-monogram navbar-brand">
 		</div>
 	  <ul>
 			<li><a href="/about" title="about">about</a></li>
