added images, carousel, finished lyft pages, cleaned aboutme

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,6 @@
 	<div class="jumbotron"> 
 		<a href="#">
 		<div id="cg-masthead-logo">
-			
 		</div>
 	</a>
 	</div>
@@ -30,7 +29,7 @@
 			<li><a href="#about" title="about">about</a></li>
 			<li><a href="#works" title="works">works</a></li>
 			<li><a href="#thoughts" title="thoughts">thoughts</a></li>
-			<li><a href="#resume" title="resume">resume</a></li>
+			<li><a href="#resume" title="resume">résumé</a></li>
 	  </ul>
 	</div>
 	<div ng-view class="main-content">
