--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
   <link rel="shortcut icon" type="image/ico" href="favicons/favicon.ico">
-  <title>/// Chris Grant</title>
+  <title>Chris Grant</title>
   <script type="text/javascript" src="//use.typekit.net/jnq2fhm.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -18,18 +18,19 @@
 <body>
 	<div class="jumbotron"> 
 		<a href="#">
-		<div id="cg-masthead-logo">
-		</div>
-	</a>
+			<div id="cg-masthead-logo">
+			</div>
+		</a>
 	</div>
 	<div class="navbar">
-		<div class="icons-monogram navbar-brand">
-		</div>
+		<a href="#">
+			<div class="icons-monogram navbar-brand">
+			</div>
+		</a>
 	  <ul>
 			<li><a href="#about" title="about">about</a></li>
 			<li><a href="#works" title="works">works</a></li>
-			<li><a href="#thoughts" title="thoughts">thoughts</a></li>
-			<li><a href="#resume" title="resume">résumé</a></li>
+			<li><a href="https://www.dropbox.com/s/p8coyskadsbahif/resume.pdf" title="resume">résumé</a></li>
 	  </ul>
 	</div>
 	<div ng-view class="main-content">
@@ -91,10 +92,7 @@
 		}
 	</script>	 
 	
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="lib/angular/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script> 
   <script src="lib/angular/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
