update resume + internal resume link

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 	  <ul>
 			<li><a href="#about" title="about">about</a></li>
 			<li><a href="#works" title="works">works</a></li>
-			<li><a href="https://www.dropbox.com/s/p8coyskadsbahif/resume.pdf" title="resume">résumé</a></li>
+			<li><a href="resume.pdf" title="resume">résumé</a></li>
 	  </ul>
 	</div>
 	<div ng-view class="main-content">
