--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 			<div class="row">
 					<div class="col-lg-4 col-md-4 col-xs-12 current-status">
 						Currently, residing in San Francisco, CA
-						<p>and interested in freelance or other opportunities.</p>
+						<p>and working at <a href="http://www.8tracks.com">8tracks.</a></p>
 					</div>
 					<div class="col-lg-8 col-md-8 col-xs-12">
 						<ul class="social">
