--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 					<div class="col-lg-8 col-md-8 col-xs-12">
 						<ul class="social">
 							<li id="email"> <a href="mailto:christopher.michael.grant@gmail.com" class="social-icon icons-email-icon-inactive"></a></li>
-							<li><a href="http://www.facebook.com/cmgrant" class="social-icon icons-fb-icon-inactive" title="facebook"></a></li>
+							<li><a href="http://www.facebook.com/chris.ehm.grant" class="social-icon icons-fb-icon-inactive" title="facebook"></a></li>
 							<li><a href="http://www.pinterest.com/chrgra" class="social-icon icons-pinterest-icon-inactive" title="pinterest"></a></li>
 							<li><a href="http://www.dribbble.com/chrismgrant" class="social-icon icons-dribbble-icon-inactive" title="dribbble"></a></li>
 							<li><a href="http://www.linkedin.com/pub/chris-grant/39/682/249/" class="social-icon icons-linkedin-icon-inactive" title="linkedin"></a></li>
