new email address

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="col-lg-8 col-md-8 col-xs-12">
 						<ul class="social">
-							<li id="email"> <a href="mailto:christopher.michael.grant@gmail.com" class="social-icon icons-email-icon-inactive"></a></li>
+							<li id="email"> <a href="mailto:chris.em.grant@gmail.com" class="social-icon icons-email-icon-inactive"></a></li>
 							<li><a href="http://www.facebook.com/chris.ehm.grant" class="social-icon icons-fb-icon-inactive" title="facebook"></a></li>
 							<li><a href="http://www.pinterest.com/chrgra" class="social-icon icons-pinterest-icon-inactive" title="pinterest"></a></li>
 							<li><a href="http://www.dribbble.com/chrismgrant" class="social-icon icons-dribbble-icon-inactive" title="dribbble"></a></li>
